<resources>
    <string name="app_name">移动监管</string>
    <string name="welcome">欢迎登录</string>
    <string name="login">登录</string>
    <string name="autoLogin">自动登录</string>
    <string name="rememberMe">记住密码</string>
    <string name="inputUserId">请输入您的账号</string>
    <string name="inputPassword">请输入您的密码</string>
    <string name="sjgk">数据概况</string>
    <string name="car_login">车辆登录</string>
    <string name="car_num">车牌号码:</string>
    <string name="car_color">车牌颜色:</string>
    <string name="vin">VIN后四位:</string>
    <string name="check_mode">检测模式:</string>
    <string name="search">查询</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="grxx">个人信息</string>
    <string name="sgrq">上岗日期</string>
    <string name="sfzh">身份证号</string>
    <string name="gzdh">工作电话</string>
    <string name="yx">邮箱</string>
    <string name="byyx">毕业院校</string>
    <string name="sxzy">所学专业</string>
    <string name="xl">学历</string>
    <string name="byrq">毕业日期</string>
    <string name="yhmc">用户名称</string>
    <string name="yhzh">用户账号</string>
    <string name="xb">性别</string>
    <string name="csrq">出生日期</string>
    <string name="csd">出生地</string>
    <string name="lxdz">联系地址</string>
    <string name="yddh">移动电话</string>
    <string name="yzbm">邮政编码</string>
    <string name="qmzp">签名照片</string>
    <string name="wdrw">我的任务</string>
    <string name="xxgl">消息管理</string>
    <string name="ywcljl">业务处理记录</string>
    <string name="qx">取消</string>
    <string name="hf">回复</string>
    <string name="kjhf">点击此处可快捷回复</string>
    <string name="test_title3">车辆类型</string>
    <string name="message_title">信息标题:</string>
    <string name="message_type">信息类别:</string>
    <string name="send_people">接收人:</string>
    <string name="replay_state">回复情况:</string>
    <string name="enclosure_info">附件信息:</string>
    <string name="info_content">信息内容:</string>
    <string name="info_remarke">信息备注:</string>
    <string name="input_message_title">输入标题</string>
</resources>